--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,15 @@
       background-color: #f2f2f2;
       padding: 25px;
     }
+
+
+    .product_details_container{
+      margin:10px;
+      padding: 10px;
+    }
+    .add_to_cart_btn{
+      margin-left: 10px;
+    }
   </style>
 </head>
 <body style="background: #ccddcc">
